JFrame CADASTRO DE VEÌCULOS - Em andamento; Funções Botões Tabela

--- a/src/psv/fmCarro.form
+++ b/src/psv/fmCarro.form
@@ -297,6 +297,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnPesquisarMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnLimpar">
           <Properties>
